Add multi-node functionality - log consolidation for n1, n2, n3 folders